# fx

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  cbindgen.toml  example.txt  main.cpp  out.c  test.sh  test.txt
.github/workflows/: valgrind.yml
cpp/: ast.cpp  ast.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  errors.cpp  errors.h  interface.cpp  interface.h  main.cpp
cpp/codegen/: codegen.cpp  codegen.h  numberliteral.cpp  numberliteral.h  stringliteral.cpp  stringliteral.h
lib/: CMakeLists.txt  compiler.cpp  compiler.h  errors.cpp  errors.h  interface.cpp  interface.h
lib/codegen/: CMakeLists.txt  ast.cpp  ast.h  binop.cpp  binop.h  chain.cpp  chain.h  codegen.cpp  codegen.h  errors.cpp  errors.h  fncall.cpp  fncall.h  fndef.cpp  fndef.h  number.cpp  number.h  ref.cpp  ref.h  string.cpp  string.h  when.cpp  when.h
src/: ast.rs  errors.rs  lexer.rs  lib.rs  main.rs  options.rs  parser.rs  test.rs
src/tests/: basic.txt
test/: test.bc  test.c  test.txt
